tests/ui/bound-struct-without-generic.stderr
error: #[error(bound = ...)] requires at least one generic type parameter
 --> $DIR/bound-struct-without-generic.rs:4:1
  |
4 | #[error(bound = std::error::Error + 'static)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
